// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper getCoverageReport "@eubfr/ingestion-quality-analyzer" provides reports for number of occurences of a given field and its coverage Works with results of agri/csv 1`] = `
Object {
  "meta": Object {
    "computed_key": "foo",
    "created_by": "bar",
    "last_modified": "baz",
  },
  "report": Array [
    Object {
      "budget.eu_contrib": 6,
      "coverage": "200.00",
    },
    Object {
      "budget.funding_area": 3,
      "coverage": "100.00",
    },
    Object {
      "budget": 3,
      "coverage": "100.00",
    },
    Object {
      "coverage": "100.00",
      "description": 3,
    },
    Object {
      "coverage": "100.00",
      "ec_priorities": 3,
    },
    Object {
      "coverage": "200.00",
      "media.0": 6,
    },
    Object {
      "coverage": "100.00",
      "media.0.meta": 3,
    },
    Object {
      "coverage": "100.00",
      "programme_name": 3,
    },
    Object {
      "coverage": "100.00",
      "project_id": 3,
    },
    Object {
      "coverage": "100.00",
      "project_locations.0": 3,
    },
    Object {
      "coverage": "200.00",
      "project_locations.0.centroid": 6,
    },
    Object {
      "coverage": "100.00",
      "project_locations.0.location": 3,
    },
    Object {
      "coverage": "200.00",
      "project_locations.0.location.coordinates": 6,
    },
    Object {
      "coverage": "100.00",
      "results": 3,
    },
    Object {
      "coverage": "200.00",
      "third_parties.0": 6,
    },
    Object {
      "coverage": "200.00",
      "timeframe": 6,
    },
    Object {
      "coverage": "100.00",
      "title": 3,
    },
    Object {
      "budget.total_cost": 4,
      "coverage": "133.33",
    },
    Object {
      "coverage": "66.67",
      "project_website": 2,
    },
  ],
}
`;

exports[`Helper getCoverageReport "@eubfr/ingestion-quality-analyzer" provides reports for number of occurences of a given field and its coverage Works with results of budg/xls 1`] = `
Object {
  "meta": Object {
    "computed_key": "foo",
    "created_by": "bar",
    "last_modified": "baz",
  },
  "report": Array [
    Object {
      "action": 3,
      "coverage": "100.00",
    },
    Object {
      "budget.eu_contrib": 6,
      "coverage": "200.00",
    },
    Object {
      "call_year": 3,
      "coverage": "100.00",
    },
    Object {
      "coverage": "100.00",
      "description": 3,
    },
    Object {
      "coverage": "100.00",
      "programme_name": 3,
    },
    Object {
      "coverage": "100.00",
      "project_id": 3,
    },
    Object {
      "coverage": "100.00",
      "project_locations.0": 3,
    },
    Object {
      "coverage": "100.00",
      "project_locations.1": 3,
    },
    Object {
      "coverage": "100.00",
      "project_locations.2": 3,
    },
    Object {
      "coverage": "100.00",
      "project_locations.3": 3,
    },
    Object {
      "coverage": "66.67",
      "project_locations.4": 2,
    },
    Object {
      "coverage": "66.67",
      "project_locations.5": 2,
    },
    Object {
      "coverage": "200.00",
      "results": 6,
    },
    Object {
      "coverage": "100.00",
      "status": 3,
    },
    Object {
      "coverage": "100.00",
      "sub_programme_name": 3,
    },
    Object {
      "coverage": "100.00",
      "success_story": 3,
    },
    Object {
      "coverage": "666.67",
      "third_parties.0": 20,
    },
    Object {
      "coverage": "700.00",
      "third_parties.1": 21,
    },
    Object {
      "coverage": "700.00",
      "third_parties.2": 21,
    },
    Object {
      "coverage": "666.67",
      "third_parties.3": 20,
    },
    Object {
      "coverage": "700.00",
      "third_parties.4": 21,
    },
    Object {
      "coverage": "466.67",
      "third_parties.5": 14,
    },
    Object {
      "coverage": "200.00",
      "timeframe": 6,
    },
    Object {
      "coverage": "100.00",
      "title": 3,
    },
    Object {
      "coverage": "33.33",
      "project_locations.6": 1,
    },
    Object {
      "coverage": "33.33",
      "project_locations.7": 1,
    },
    Object {
      "coverage": "33.33",
      "project_locations.8": 1,
    },
    Object {
      "coverage": "33.33",
      "project_locations.9": 1,
    },
    Object {
      "coverage": "33.33",
      "project_locations.10": 1,
    },
    Object {
      "coverage": "33.33",
      "project_locations.11": 1,
    },
    Object {
      "coverage": "33.33",
      "project_locations.12": 1,
    },
    Object {
      "coverage": "33.33",
      "project_locations.13": 1,
    },
    Object {
      "coverage": "33.33",
      "project_locations.14": 1,
    },
    Object {
      "coverage": "233.33",
      "third_parties.6": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.7": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.8": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.9": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.10": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.11": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.12": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.13": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.14": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.15": 7,
    },
    Object {
      "coverage": "233.33",
      "third_parties.16": 7,
    },
  ],
}
`;

exports[`Helper getCoverageReport "@eubfr/ingestion-quality-analyzer" provides reports for number of occurences of a given field and its coverage Works with results of iati/csv 1`] = `
Object {
  "meta": Object {
    "computed_key": "foo",
    "created_by": "bar",
    "last_modified": "baz",
  },
  "report": Array [
    Object {
      "coverage": "100.00",
      "description": 3,
    },
    Object {
      "coverage": "100.00",
      "project_id": 3,
    },
    Object {
      "coverage": "100.00",
      "project_locations.0": 3,
    },
    Object {
      "coverage": "100.00",
      "reporting_organisation": 3,
    },
    Object {
      "coverage": "166.67",
      "timeframe": 5,
    },
    Object {
      "coverage": "100.00",
      "title": 3,
    },
    Object {
      "budget.eu_contrib": 2,
      "coverage": "66.67",
    },
  ],
}
`;

exports[`Helper getCoverageReport "@eubfr/ingestion-quality-analyzer" provides reports for number of occurences of a given field and its coverage Works with results of inforegio/json 1`] = `
Object {
  "meta": Object {
    "computed_key": "foo",
    "created_by": "bar",
    "last_modified": "baz",
  },
  "report": Array [
    Object {
      "budget.total_cost": 6,
      "coverage": "200.00",
    },
    Object {
      "budget.eu_contrib": 6,
      "coverage": "200.00",
    },
    Object {
      "budget.funding_area": 2,
      "coverage": "66.67",
    },
    Object {
      "coverage": "100.00",
      "description": 3,
    },
    Object {
      "coverage": "100.00",
      "period": 3,
    },
    Object {
      "coverage": "100.00",
      "project_id": 3,
    },
    Object {
      "coverage": "200.00",
      "project_locations.0": 6,
    },
    Object {
      "coverage": "200.00",
      "project_locations.0.nuts.0": 6,
    },
    Object {
      "coverage": "100.00",
      "project_website": 3,
    },
    Object {
      "coverage": "266.67",
      "themes": 8,
    },
    Object {
      "coverage": "400.00",
      "third_parties.0": 12,
    },
    Object {
      "coverage": "66.67",
      "timeframe": 2,
    },
    Object {
      "coverage": "100.00",
      "title": 3,
    },
    Object {
      "coverage": "100.00",
      "type": 3,
    },
  ],
}
`;

exports[`Helper getCoverageReport "@eubfr/ingestion-quality-analyzer" provides reports for number of occurences of a given field and its coverage Works with results of inforegio/xml 1`] = `
Object {
  "meta": Object {
    "computed_key": "foo",
    "created_by": "bar",
    "last_modified": "baz",
  },
  "report": Array [
    Object {
      "budget.total_cost": 6,
      "coverage": "200.00",
    },
    Object {
      "budget.eu_contrib": 6,
      "coverage": "200.00",
    },
    Object {
      "coverage": "100.00",
      "description": 3,
    },
    Object {
      "coverage": "100.00",
      "period": 3,
    },
    Object {
      "coverage": "100.00",
      "project_id": 3,
    },
    Object {
      "coverage": "200.00",
      "project_locations.0": 6,
    },
    Object {
      "coverage": "100.00",
      "project_locations.0.nuts.0": 3,
    },
    Object {
      "coverage": "100.00",
      "project_website": 3,
    },
    Object {
      "coverage": "100.00",
      "themes": 3,
    },
    Object {
      "coverage": "100.00",
      "title": 3,
    },
    Object {
      "coverage": "100.00",
      "type": 3,
    },
  ],
}
`;

exports[`Helper getCoverageReport "@eubfr/ingestion-quality-analyzer" provides reports for number of occurences of a given field and its coverage Works with results of valor/xls 1`] = `
Object {
  "meta": Object {
    "computed_key": "foo",
    "created_by": "bar",
    "last_modified": "baz",
  },
  "report": Array [
    Object {
      "budget.eu_contrib": 6,
      "coverage": "200.00",
    },
    Object {
      "call_year": 3,
      "coverage": "100.00",
    },
    Object {
      "coverage": "100.00",
      "description": 3,
    },
    Object {
      "coverage": "100.00",
      "programme_name": 3,
    },
    Object {
      "coverage": "100.00",
      "project_id": 3,
    },
    Object {
      "coverage": "100.00",
      "project_locations.0": 3,
    },
    Object {
      "coverage": "200.00",
      "results": 6,
    },
    Object {
      "coverage": "100.00",
      "status": 3,
    },
    Object {
      "coverage": "100.00",
      "success_story": 3,
    },
    Object {
      "coverage": "633.33",
      "third_parties.0": 19,
    },
    Object {
      "coverage": "100.00",
      "title": 3,
    },
  ],
}
`;

exports[`Helper getCoverageReport "@eubfr/ingestion-quality-analyzer" provides reports for number of occurences of a given field and its coverage Works with results of wifi4eu/xls 1`] = `
Object {
  "meta": Object {
    "computed_key": "foo",
    "created_by": "bar",
    "last_modified": "baz",
  },
  "report": Array [
    Object {
      "call_year": 3,
      "coverage": "100.00",
    },
    Object {
      "coverage": "100.00",
      "description": 3,
    },
    Object {
      "coverage": "200.00",
      "third_parties.0": 6,
    },
    Object {
      "coverage": "100.00",
      "project_id": 3,
    },
    Object {
      "coverage": "400.00",
      "project_locations.0": 12,
    },
    Object {
      "coverage": "100.00",
      "project_website": 3,
    },
    Object {
      "coverage": "100.00",
      "timeframe": 3,
    },
    Object {
      "coverage": "100.00",
      "title": 3,
    },
  ],
}
`;
